--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Minibobi">
     <link href="http://minibobi.qiniudn.com/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="http://minibobi.qiniudn.com/static/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
-    <link href="/static/minibobi/css/style.css" rel="stylesheet" type="text/css">
+    <link href="http://minibobi.qiniudn.com/static/minibobi/css/style.css" rel="stylesheet" type="text/css">
     {% block css %}
     {% endblock %}
     <title>{% block title %}{% endblock %}</title>
@@ -79,7 +79,7 @@
                 </ul>
             </div>
                 <div class="col-md-7 col-sm-7 col-xs-12 hidden-xs logo">
-                <a href="/"><img src = "/static/minibobi/images/LOGO.jpg" class="img-responsive"></a>
+                <a href="/"><img src = "http://minibobi.qiniudn.com/static/minibobi/images/LOGO.jpg" class="img-responsive"></a>
                 </div>
                 <div class="col-md-5 col-sm-5 search hidden-xs">
                 <form class="form-inline" role = "form">
@@ -140,7 +140,7 @@
 <script src="http://cdn.bootcss.com/jquery/2.0.3/jquery.min.js"></script>
 <script src="http://cdn.bootcss.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script src="http://cdn.bootcss.com/jquery.pin/1.0.1/jquery.pin.min.js"></script>
-<script type="text/javascript" src="/static/minibobi/js/responsiveslides.min.js"></script>
+<script type="text/javascript" src="http://minibobi.qiniudn.com/static/minibobi/js/responsiveslides.min.js"></script>
 <script type="text/javascript">
     $(".side-nav").pin({
         containerSelector:".wrap"
