--- a/templates/product.html
+++ b/templates/product.html
@@ -93,8 +93,8 @@
 {% endblock %}
 {% block js %}
 <script src="http://cdn.bootcss.com/jqueryui/1.10.4/jquery-ui.min.js"></script>
-<script type="text/javascript" src="/static/touchspin/bootstrap.touchspin.js"></script>
-<script src="/static/minibobi/js/bobi.js"></script>
+<script type="text/javascript" src="http://minibobi.qiniudn.com/static/touchspin/bootstrap.touchspin.js"></script>
+<script src="http://minibobi.qiniudn.com/static/minibobi/js/bobi.js"></script>
 <script>
   $(function() {
     $(".banner ul").responsiveSlides();
