--- a/static/minibobi/css/style.css
+++ b/static/minibobi/css/style.css
@@ -30,12 +30,12 @@ body,html{
 }
 
 p, span, a,li,div{
-	font-size: 0.875em;
+	font-size: 0.875rem;
 	color:#9e9e9e;
 	font-family: 'Quicksand',Arial, sans-serif;
 }
 p,span{
-	line-height: 1.625em;
+	line-height: 1.625rem;
 }
 h1,h2,h3,h4,h5,h6{
 	font-family: 'Helvetica Nenu',Arial, sans-serif;
@@ -670,9 +670,4 @@ td tr{
     .cart_btn a.reverse>span{
     	width: 100%;
     }
-}
-@media all and (max-width: 568px) { /* screen size until 500px */
-    body,html {
-        font-size: 60%; /* 0.8x default size */
-        }
 }
