--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <div>
-                        <span>MINIBOBI</span>
+                        <a href="/"><span>MINIBOBI</span></a>
                     </div>
                     <a href="/cart/"><span class="glyphicon glyphicon-shopping-cart"></span></a>
                 </div>
