--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
                             {% endif %}
                             </a>
                         </div>
+                        <div class="brief">
                         <p><a href="/product/{{ p.id }}">{{ p.name }}</a></p>
                         <p>
                         {% if p.is_discount %}
@@ -30,6 +31,7 @@
                         <span>¥{{ p.price }}</span>
                         {% endif %}
                         </p>
+                        </div>
                         <div class="cart_btn">
                         <a href= "/product/{{ p.id }}"><span>VIEW PRODUCT</span></a>
                         </div>
