--- a/templates/base-list.html
+++ b/templates/base-list.html
@@ -16,15 +16,15 @@
                     <li><a href="/lookbook/">LOOKBOOK</a></li>
                 </ul>
             </li>
-            <li><a href="#">BOYS</a>
+            <li><a href="/product/boys/">BOYS</a>
                 <ul class="nav">  
                     <li><a href="/product/boys/tshirt/">TSHIRT</a></li>
                     <li><a href="/product/boys/polo/">POLO</a></li>
                     <li><a href="/product/boys/shirt/">SHIRT</a></li>
                     <li><a href="/product/boys/pants/">PANTS</a></li>
                     <li><a href="/product/boys/cardigan">CARDIGAN</a></li>
-                    <li><a href="/product/boysaccessories/">ACCESSORIES</a></li>
-                    <li><a href="#">LOOKBOOK</a></li>
+                    <li><a href="/product/boys/accessories/">ACCESSORIES</a></li>
+                    <li><a href="/lookbook/">LOOKBOOK</a></li>
                 </ul>
             </li>
             <li><a href="/lookbook/">LOOKBOOK</a></li>
