--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <meta name="author" content="Minibobi">
     <link href="http://minibobi.qiniudn.com/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="http://minibobi.qiniudn.com/static/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
+
     <link href="http://minibobi.qiniudn.com/static/minibobi/css/style.css" rel="stylesheet" type="text/css">
     {% block css %}
     {% endblock %}
@@ -22,11 +23,19 @@
     <div class="container shadow-page">
             <header>
             <div class="col-lg-12 col-sm-12 col-xs-12 navbar-header top hidden-xs">
-                <ul class="nav navbar-nav">
-                    <li><a href="/lang/?lang=zh&next={{request.path}}">简体中文</a></li>
-                    <li><a>|</a></li>
-                    <li><a href="/lang/?lang=en&next={{request.path}}">English</a></li>
-                </ul>
+                {% load i18n %}
+                 <form action="{% url 'set_language' %}" method="post" class="form-inline language-form">
+                {% csrf_token %}
+                <input name="next" type="hidden" value="{{ redirect_to }}" />
+                <select name="language">
+                {% get_language_info_list for LANGUAGES as languages %}
+                {% for language in languages %}
+                <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected="selected"{% endif %}>
+                    {{ language.name_local }} ({{ language.code }})
+                </option>
+                {% endfor %}
+                </select>
+                </form>
                 <ul class="nav navbar-nav navbar-right ">
                     <li><a><span>CALL US AT 131231</span></a></li>
                     <li><a><span>|</span></a></li>
@@ -50,7 +59,7 @@
             </div>
             <div class="col-lg-12 col-sm-12 col-xs-12 mobile-nav">
                 <ul class="nav navbar-nav">
-                    <li><a href="#" class="dropdown-toggle" data-toggle ="dropdown"><span>GIRLS</span><span class="glyphicon glyphicon-chevron-down"></span></a>
+                    <li><a href="#" class="dropdown-toggle" data-toggle ="dropdown"><span>{% trans "GIRLS" %}</span><span class="glyphicon glyphicon-chevron-down"></span></a>
                         <ul class="dropdown-menu wideMenuItem">  
                             <li><a href="/product/girls/top/">TOP</a></li>
                             <li><a href="/product/girls/dress/">DRESS</a></li>
@@ -61,7 +70,7 @@
                             <li><a href="/lookbook/">LOOKBOOK</a></li>
                         </ul>
                     </li>
-                    <li><a href="#" class="dropdown-toggle" data-toggle ="dropdown"><span>BOYS</span><span class="glyphicon glyphicon-chevron-down"></span></a>
+                    <li><a href="#" class="dropdown-toggle" data-toggle ="dropdown"><span>{% trans "BOYS" %}</span><span class="glyphicon glyphicon-chevron-down"></span></a>
                         <ul class="dropdown-menu wideMenuItem">  
                             <li><a href="/product/boys/tshirt/">TSHIRT</a></li>
                             <li><a href="/product/boys/polo/">POLO</a></li>
@@ -69,7 +78,7 @@
                             <li><a href="/product/boys/pants/">PANTS</a></li>
                             <li><a href="/product/boys/cardigan">CARDIGAN</a></li>
                             <li><a href="/product/boysaccessories/">ACCESSORIES</a></li>
-                            <li><a href="#">LOOKBOOK</a></li>
+                            <li><a href="/lookbook/">LOOKBOOK</a></li>
                         </ul>
                     </li>
                     <li><a href="/lookbook/"><span>LOOKBOOK</span><span class="glyphicon glyphicon-chevron-right"></span></a></li>
@@ -158,10 +167,15 @@
         }
     });
 </script>
-<script>
+<script type="text/javascript">
   $(function() {
     $(".banner ul").responsiveSlides();
   });
+</script>
+<script type="text/javascript">
+    $(".language-form select").change(function(){
+        $(".language-form").submit();
+    });
 </script>
 {% block js %}
 {% endblock %}
