--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
                     {% for p in products %}
                     <div class="col-md-4 col-sm-4 col-xs-6 item">
                         <div class="cover">
-                            <a href="/product/{{ p.id }}">
+                            <a href="/product/{{ p.id }}/">
                             <img src="{{ p.get_cover.thumb_big }}" class="img-responsive"/>
                             {% if p.is_discount %}
                             <img src="{{ p.discount.icon.url }}" class="discount" />
@@ -22,7 +22,7 @@
                             </a>
                         </div>
                         <div class="brief">
-                        <p><a href="/product/{{ p.id }}">{{ p.name }}</a></p>
+                        <p><a href="/product/{{ p.id }}/">{{ p.name }}</a></p>
                         <p>
                         {% if p.is_discount %}
                         <span style="text-decoration:line-through;">¥{{ p.price }}</span>
@@ -33,7 +33,7 @@
                         </p>
                         </div>
                         <div class="cart_btn">
-                        <a href= "/product/{{ p.id }}"><span>VIEW PRODUCT</span></a>
+                        <a href= "/product/{{ p.id }}/"><span>VIEW PRODUCT</span></a>
                         </div>
                     </div>
                     {% empty %}
