--- a/static/minibobi/css/minibobi.css
+++ b/static/minibobi/css/minibobi.css
@@ -31,6 +31,7 @@ body,html{
 p, span, a,li,div{
 	color:#9e9e9e;
 	font-family: 'Quicksand',Arial, sans-serif;
+	font-size: 0.875rem;
 }
 p,span{
 	line-height: 1.625rem;
@@ -259,6 +260,8 @@ aside{
 	font-size: 1.5rem;
 	font-weight: bold;
 	margin-top: 10px;
+	display: inline-block;
+	width: auto;
 }
 .side-nav > li > a:first{
 	color:#1b1b1b;
@@ -275,11 +278,12 @@ aside{
 	font-size: 1.4rem;
 	padding-top: 0px;
 	padding-bottom: :0px;
+	display: inline-block;
+	width: auto;
 }
 .side-nav > li >ul>li>a:hover{
 	background-color:#fff;
 	color:#000;
-	font-size: 0.875rem;
 	padding-top: 0px;
 	padding-bottom: :0px;
 	text-decoration: underline;
@@ -299,7 +303,7 @@ aside{
 	margin: 0 auto;
 }
 .item .brief{
-	min-height: 70px;
+	min-height: 60px;
 }
 .cart_btn a{
 	display: inline-block;
@@ -314,7 +318,7 @@ aside{
 .cart_btn a span{
 	display: inline-block;
 	border: 2px dashed #fff;
-	padding: 10px 5px;
+	padding: 5px 5px;
 	color:#fff;
 	width: auto;
 }
@@ -332,7 +336,7 @@ aside{
 .cart_btn a.reverse > span{
 	display: inline-block;
 	background-color: #fff;
-	padding: 8px 5px;
+	padding: 3px 5px;
 	border:2px dashed #fcc4ac;
 	width: auto;
 	text-align: center;
@@ -343,7 +347,7 @@ aside{
 .cart_btn_reverse a span{
 	display: inline-block;
 	border: 2px dashed #fcc4ac;
-	padding: 10px 5px;
+	padding: 3px 5px;
 	color:#fcc4ac;
 	width: auto;
 }
