--- a/templates/base-list.html
+++ b/templates/base-list.html
@@ -5,31 +5,32 @@
 <aside>
     <nav>
         <ul class="nav side-nav">
-            <li><a href="/product/girls/">GIRLS</a>
+            {% load i18n %}
+            <li><a href="/product/girls/">{% trans 'GIRLS' %}</a>
                 <ul class="nav">  
-                    <li><a href="/product/girls/top/">TOP</a></li>
-                    <li><a href="/product/girls/dress/">DRESS</a></li>
-                    <li><a href="/product/girls/skirt/">SKIRT</a></li>
-                    <li><a href="/product/girls/pants">PANTS</a></li>
-                    <li><a href="/product/girls/cardigan">CARDIGAN</a></li>
-                    <li><a href="/product/girls/accessories">ACCESSORIES</a></li>
-                    <li><a href="/lookbook/">LOOKBOOK</a></li>
+                    <li><a href="/product/girls/top/">{% trans 'TOP' %}</a></li>
+                    <li><a href="/product/girls/dress/">{% trans 'DRESS' %}</a></li>
+                    <li><a href="/product/girls/skirt/">{% trans 'SKIRT' %}</a></li>
+                    <li><a href="/product/girls/pants">{% trans 'PANTS' %}</a></li>
+                    <li><a href="/product/girls/cardigan">{% trans 'CARDIGAN' %}</a></li>
+                    <li><a href="/product/girls/accessories">{% trans 'ACCESSORIES' %}</a></li>
+                    <li><a href="/lookbook/">{% trans 'LOOKBOOK' %}</a></li>
                 </ul>
             </li>
-            <li><a href="/product/boys/">BOYS</a>
+            <li><a href="/product/boys/">{% trans 'BOYS' %}</a>
                 <ul class="nav">  
-                    <li><a href="/product/boys/tshirt/">TSHIRT</a></li>
-                    <li><a href="/product/boys/polo/">POLO</a></li>
-                    <li><a href="/product/boys/shirt/">SHIRT</a></li>
-                    <li><a href="/product/boys/pants/">PANTS</a></li>
-                    <li><a href="/product/boys/cardigan">CARDIGAN</a></li>
-                    <li><a href="/product/boys/accessories/">ACCESSORIES</a></li>
-                    <li><a href="/lookbook/">LOOKBOOK</a></li>
+                    <li><a href="/product/boys/tshirt/">{% trans 'TSHIRT' %}</a></li>
+                    <li><a href="/product/boys/polo/">{% trans 'POLO' %}</a></li>
+                    <li><a href="/product/boys/shirt/">{% trans 'SHIRT' %}</a></li>
+                    <li><a href="/product/boys/pants/">{% trans 'PANTS' %}</a></li>
+                    <li><a href="/product/boys/cardigan">{% trans 'CARDIGAN' %}</a></li>
+                    <li><a href="/product/boys/accessories/">{% trans 'ACCESSORIES' %}</a></li>
+                    <li><a href="/lookbook/">{% trans 'LOOKBOOK' %}</a></li>
                 </ul>
             </li>
-            <li><a href="/lookbook/">LOOKBOOK</a></li>
-            <li><a href="/product/sales/">SALES</a></li>
-            <li><a href="#">ACCESORIES</a>
+            <li><a href="/lookbook/">{% trans 'LOOKBOOK' %}</a></li>
+            <li><a href="/product/sales/">{% trans 'SALES' %}</a></li>
+            <li><a href="#">{% trans 'ACCESSORIES' %}</a>
                 <ul class="nav">  
                     <li><a href="#">MINI BOBI</a></li>
                     <li><a href="#">ANA</a></li>
