--- a/templates/cart.html
+++ b/templates/cart.html
@@ -2,22 +2,23 @@
  {% block title %}Shopping Cart{% endblock %}
  {% block main %}
                 <div class="col-md-12 col-xs-12 col-sm-12 cart">
-                    <h1>SHOPPING BAG</h1>
+                    {% load i18n %}
+                    <h3>{% trans "SHOPPING BAG" %}</h3>
                 <div class=".table-responsive hidden-xs">
                 <table class="table">
                     <thead>
                     <tr>
-                        <th>PRODUCT</th>
-                        <th>DESCRIPTION</th>
-                        <th>COLOR</th>
-                        <th>SIZE</th>
-                        <th>QUANTITY</th>
-                        <th>AMOUNT</th>
-                        <th>DELETE</th>
+                        <th>{% trans "PRODUCT" %}</th>
+                        <th>{% trans "DESCRIPTION" %}</th>
+                        <th>{% trans "COLOR" %}</th>
+                        <th>{% trans "SIZE" %}</th>
+                        <th>{% trans "QUANTITY" %}</th>
+                        <th>{% trans "AMOUNT" %}</th>
+                        <th>{% trans "DELETE" %}</th>
                     </tr>
                     </thead>
                     <tfoot>
-                    <tr><td colspan = "7">TOTAL: ¥ {{ cart.total }} RMB</td></tr>
+                    <tr><td colspan = "7">{% trans "TOTAL" %}: ¥ {{ cart.total }} RMB</td></tr>
                     </tfoot>
                     <tbodt>
                     {% for i in cart.items.all %}
@@ -46,7 +47,7 @@
                         </td>
                     </tr>
                     {% empty %}
-                        <label>The cart is empty!</label>
+                        <label>{% trans "The cart is empty!" %}</label>
                     {% endfor %}
                     </tbodt>
                 </table>
@@ -65,16 +66,16 @@
                         </div>
                         <div class="col-md-12 col-xs-12 col-sm-12 cart_btn" style="padding:0px; margin-top:10px;">
                         <span class="quantity col-xs-12" style='padding:0px;width:100px;'><input type="text" value = "{{ i.quantity }}" name = "quantity" class="form_control" id="id_quantity" value_data={{ i.id }} style="text-align:center;"></span>   
-                        <a href="/cart/delete/{{ i.id }}" class="col-xs-7 reverse" style="width:auto;padding:3px 5px;margin-left:40px;"><span style="padding:2px 5px;">DELETE</span></a>
+                        <a href="/cart/delete/{{ i.id }}" class="col-xs-7 reverse" style="width:auto;padding:3px 5px;float:right;"><span style="padding:2px 5px;">{% trans "DELETE" %}</span></a>
                         </div>
                     </div>
                     {% empty %}
-                    <label>The cart is empty!</label>
+                    <label>{% trans "The cart is empty!" %}</label>
                     {% endfor %}
                 </div>
                 <div class="cart_btn col-md-12 col-xs-12 col-sm-12" style="margin-top:5px;">
-                    <a href="/"><span>CONTINUE SHOPPING</span></a>
-                    <a href= "/order/" class="reverse"><span>CONFIRM ORDER</span></a>
+                    <a href="/"><span>{% trans "CONTINUE SHOPPING" %}</span></a>
+                    <a href= "/order/" class="reverse"><span>{% trans "CONFIRM ORDER" %}</span></a>
                 </div>
                 </div>
 {% endblock %}
