--- a/templates/product.html
+++ b/templates/product.html
@@ -7,7 +7,7 @@
     <link href="http://cdn.bootcss.com/jqueryui/1.10.4/css/jquery.ui.core.min.css" rel="stylesheet">
 {% endblock %}
 {% block title %}{{ product.page_title }}{% endblock %}
-
+{% load i18n %}
 {% block main %}
                 <div class="col-md-5 col-xs-12 col-sm-12 cover">
                     <div class="hidden-xs">
@@ -17,7 +17,7 @@
                         
                         <div class="col-md-12 col-xs-12 col-sm-12 thumbs" style="margin-top:5px;">
                         {% for i in product.images.all %}
-                        <div class="col-md-3 col-xs-3 col-sm-3" style="padding-left:0;">
+                        <div class="col-md-4 col-xs-4 col-sm-4" style="padding-left:0;">
                             <img src="{{ i.thumb_middle }}" class="img-responsive" style="float:left;">
                         </div>
                         {% endfor %}
@@ -40,11 +40,11 @@
                         <p class="price">¥{{ product.price }}</p>
                     </div>
                     <ul class="link col-md-12 col-xs-12 col-sm-12">
-                        <li><a href="#">COMPOSITION</a></li>
+                        <li><a href="#">{% trans "COMPOSITION" %}</a></li>
                         <li><a>|</a></li>
-                        <li><a href="#">SHIPPING</a></li>
+                        <li><a href="#">{% trans "SHIPPING" %}</a></li>
                         <li><a>|</a></li>
-                        <li><a href="#">SIZE GUIDE</a></li>
+                        <li><a href="#">{% trans "SIZE GUIDE" %}</a></li>
                     </ul>
                     <ul class="color col-md-12 col-xs-12 col-sm-12">
                         <li option_value="{{ product.color.id }}">
@@ -53,31 +53,31 @@
                         </li>
                     </ul>
                     <div class="size col-md-12 col-xs-12 col-sm-12">
-                        <label>SIZE:</label>
+                        <label>{% trans "SIZE" %}:</label>
                         <ul class="options">
                             {% for s in product.size.all %}
                             <li option_value = "{{ s.id }}"><span class="size-span">{{ s.size }}</span></li>
                             {% endfor %}
                         </ul>
                     <div class="error_message col-md-12 col-xs-12 col-sm-12" style="display:none;">
-                        <span>Please choose the size you want</span>
+                        <span>{% trans "Please choose the size you want" %}</span>
                     </div>
                     </div>
                     <div class="quantity col-md-5 col-xs-12 col-sm-12">
-                        <label>QUANTITY:</label>
+                        <label>{% trans "QUANTITY" %}:</label>
                         <input type = "text" name = "quantity" class="form_control" id="id_quantity">
                     </div>
                     <div class="cart_btn col-md-12 col-xs-12 col-sm-12">
-                    <a href= "javascript:void(0)" data_value="{{ cart.id }}"><span>ADD TO CART</span></a>
-                    <a href="/" class="reverse"><span>CONTINUE SHOPPING</span></a>
+                    <a href= "javascript:void(0)" data_value="{{ cart.id }}"><span>{% trans "ADD TO CART" %}</span></a>
+                    <a href="/" class="reverse"><span>{% trans "CONTINUE SHOPPING" %}</span></a>
                     </div>
                 </div>
                 <div class="col-md-12 col-xs-12 col-sm-12">
                     <div id="tab">
                         <ul>
-                            <li><a href="#tab1">DETAILS</a></li>
+                            <li><a href="#tab1">{% trans "DETAILS" %}</a></li>
                             <li><a>|</a></li>
-                            <li><a href="#tab2">RETURNS</a></li>
+                            <li><a href="#tab2">{% trans "RETURNS" %}</a></li>
                         </ul>
                         <div id="tab1" class="tab-content">
                             {{ product.long_description|linebreaksbr }}
@@ -88,7 +88,12 @@
                     </div>
                 </div>
                 <div class="col-md-12 col-xs-12 col-sm-12 rec">
-                    <label>RECOMMENDED PRODUCT</label>
+                    <h4><label>{% trans "RECOMMEND PRODUCT" %}</label></h4>
+                    {% for p in products %}
+                    <div class="col-md-3 col-xs-3 col-sm-3">
+                       <a href="/product/{{ p.id }}"><img src="{{ p.get_cover.thumb_middle }}" class="img-responsive"></a>
+                    </div>
+                    {% endfor %}
                 </div>
 {% endblock %}
 {% block js %}
