change the static link

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,8 @@
     <meta name="description" content="{% block description_meta %}MINIBOBI,BABY CLOTHING, FAT BABY CLOTHING,{% endblock %}">
     <meta name="keywords" content = "{% block keywords_meta %}BABY CLOTHING, FAT BABY CLOTHING{% endblock %}">
     <meta name="author" content="Minibobi">
-    <link href="http://minibobi.qiniudn.com/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="http://minibobi.qiniudn.com/static/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
+    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/static/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
 
     <link href="/static/minibobi/css/minibobi.css" rel="stylesheet" type="text/css">
     {% block css %}
@@ -147,10 +147,10 @@
         </div>
     </footer>
 </body>
-<script src="http://cdn.bootcss.com/jquery/2.0.3/jquery.min.js"></script>
-<script src="http://cdn.bootcss.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script src="http://cdn.bootcss.com/jquery.pin/1.0.1/jquery.pin.min.js"></script>
-<script type="text/javascript" src="http://minibobi.qiniudn.com/static/minibobi/js/responsiveslides.min.js"></script>
+<script src="/static/minibobi/js/jquery.min.js"></script>
+<script src="/static/bootstrap/js/bootstrap.min.js"></script>
+<script src="/static/minibobi/js/jquery.pin.min.js"></script>
+<script type="text/javascript" src="/static/minibobi/js/responsiveslides.min.js"></script>
 <script type="text/javascript">
     $(".side-nav").pin({
         containerSelector:".wrap"
