--- a/templates/product.html
+++ b/templates/product.html
@@ -4,7 +4,7 @@
 {% block keywords_meta %}{{ product.keywords_meta }}{% endblock %}
 
 {% block css %}
-    <link href="http://cdn.bootcss.com/jqueryui/1.10.4/css/jquery.ui.core.min.css" rel="stylesheet">
+    <link href="/static/minibobi/css/jquery.ui.core.min.css" rel="stylesheet">
 {% endblock %}
 {% block title %}{{ product.page_title }}{% endblock %}
 {% load i18n %}
@@ -97,9 +97,9 @@
                 </div>
 {% endblock %}
 {% block js %}
-<script src="http://cdn.bootcss.com/jqueryui/1.10.4/jquery-ui.min.js"></script>
-<script type="text/javascript" src="http://minibobi.qiniudn.com/static/touchspin/bootstrap.touchspin.js"></script>
-<script src="http://minibobi.qiniudn.com/static/minibobi/js/bobi.js"></script>
+<script src="/static/minibobi/js/jquery-ui.min.js"></script>
+<script type="text/javascript" src="/static/touchspin/bootstrap.touchspin.js"></script>
+<script src="/static/minibobi/js/bobi.js"></script>
 <script>
   $(function() {
     $(".banner ul").responsiveSlides();
