--- a/templates/cart.html
+++ b/templates/cart.html
@@ -58,15 +58,16 @@
                         <div class="col-md-5 col-xs-5 col-sm-5" style="padding:0px;">
                             <a href="/product/{{ i.product.id }}"><img src="{{ i.product.get_cover.thumb_middle }}" class="img-responsive"/></a>                   
                         </div>
-                        <div class="col-md-7 col-xs-7 col-sm-7" style="padding:0px;padding-left:5px;">
+                        <div class="col-md-7 col-xs-7 col-sm-7" style="padding:0px;padding-left:10px;">
                             <p><b>{{ i.product.name }}</b></p>
                             <p>¥ {{ i.get_price }}</p>
                             <p>{{ i.color.name }}</p>
                             <p>{{ i.size.size }}</p>
                         </div>
                         <div class="col-md-12 col-xs-12 col-sm-12 cart_btn" style="padding:0px; margin-top:10px;">
-                        <span class="quantity col-xs-12" style='padding:0px;width:100px;'><input type="text" value = "{{ i.quantity }}" name = "quantity" class="form_control" id="id_quantity" value_data={{ i.id }} style="text-align:center;"></span>   
-                        <a href="/cart/delete/{{ i.id }}" class="col-xs-7 reverse" style="width:auto;padding:3px 5px;float:right;"><span style="padding:2px 5px;">{% trans "DELETE" %}</span></a>
+                        <span class="quantity col-xs-12" style='padding:0px;width:100px;display:block;'><input type="text" value = "{{ i.quantity }}" name = "quantity" class="form_control" id="id_quantity" value_data={{ i.id }} style="text-align:center;"></span>   
+                        <br/><br/><br/>
+                        <a href="/cart/delete/{{ i.id }}" class="col-xs-7 reverse" style="width:100px;padding:3px 5px;display:inline-block"><span style="padding:2px 5px;">{% trans "DELETE" %}</span></a>
                         </div>
                     </div>
                     {% empty %}
