--- a/templates/order.html
+++ b/templates/order.html
@@ -46,7 +46,7 @@
 		</div>
 		</fieldset>
 		<fieldset>
-		<legend>RECEIVER INFORMATION</legend>
+		<legend>{% trans "RECEIVER INFORMATION" %}</legend>
 		<div class="form-group">
 				<label for ="id_r_name" class="col-sm-4 control-label">{% trans "Receiver Name" %}</label>
 			<div class="col-sm-8">
@@ -82,7 +82,7 @@
 		</div>
 		</fieldset>
 		<fieldset>
-		<legend>MARKUP</legend>
+		<legend>{% trans "MARKUP" %}</legend>
 		<div class="form-group">
 				<label for ="id_markup" class="col-sm-4 control-label">{% trans "Markup" %}</label>
 			<div class="col-sm-8">
