--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,9 @@
 {% extends "base-page.html" %}
 {% block title %}About Minibobi{% endblock %}
 {% block main %}
+                {% load i18n %}
                 <div class="col-md-12">
-                    <h1>ABOUT</h1>
+                    <h3>{% trans "ABOUT" %}</h3>
                 </div>
                 <div class="col-md-12 about">
                     <div class="col-md-5">
