--- a/static/minibobi/css/minibobi.css
+++ b/static/minibobi/css/minibobi.css
@@ -26,6 +26,7 @@
 body,html{
 	background-image: url("http://minibobi.qiniudn.com/static/minibobi/images/background.jpg");
 	color:#fff;
+	font-size: 100%;
 }
 
 p, span, a,li,div{
@@ -37,7 +38,7 @@ p,span{
 	line-height: 1.625rem;
 }
 h1,h2,h3,h4,h5,h6{
-	font-family: 'Helvetica Nenu',Arial, sans-serif;
+	font-family: 'Quicksand',Arial, sans-serif;
 	font-weight: bold;
 	color:#000;
 }
@@ -45,7 +46,7 @@ h4,h5,h6{
 	font-weight: normal;
 }
 a{
-	font-size: 1rem;
+	font-size: 0.875rem;
 }
 a:hover{
 	color:#000; 
@@ -93,7 +94,7 @@ a.active{
 	padding-bottom: 1em;
 }
 .top{
-	margin-top: 5px;
+	margin-top: 15px;
 }
 .top ul>li>a{
 	padding: 2px 5px
@@ -160,7 +161,7 @@ a.active{
 	border: none;
 	padding: 10px;
 	float: right;
-	margin-left: 10px;
+	margin-left: 1s0px;
 }
 .top-mobile>.button-group>a>span{
 	display: inline-block;
@@ -199,7 +200,7 @@ a.active{
 .main-nav >li>a{
 	color:#9e9e9e;
 	background-color: transparent;
-	font-size: 1.5rem;
+	font-size: 1rem;
 	padding-top:20px;
 	padding-bottom:20px;
 }
@@ -207,6 +208,10 @@ a.active{
 	color:#333;
 	background-color: transparent;
 	text-decoration: underline;
+}
+.main-nav >li>a.active{
+	color:#333;
+	text-decoration: underline;	
 }
 
 /*---------------Banner--------------*/
@@ -253,11 +258,12 @@ aside{
 }
 .side-nav{
 	padding-left: 30px;
-	margin-top: 10px;
+	margin-top: 0px;
+	padding-top: 0px;
 }
 .side-nav > li > a{
 	color:#1b1b1b;
-	font-size: 1.5rem;
+	font-size: 1rem;
 	font-weight: bold;
 	margin-top: 10px;
 	display: inline-block;
@@ -265,7 +271,7 @@ aside{
 }
 .side-nav > li > a:first{
 	color:#1b1b1b;
-	font-size: 1.5rem;
+	font-size: 1rem;
 	font-weight: bold;
 	margin-top: 0px;
 }
@@ -275,7 +281,7 @@ aside{
 
 .side-nav > li >ul>li>a{
 	color:#9e9e9e;
-	font-size: 1.4rem;
+	font-size: 1rem;
 	padding-top: 0px;
 	padding-bottom: :0px;
 	display: inline-block;
@@ -291,6 +297,7 @@ aside{
 .item{
 	padding: 10px;
 	color:#9e9e9e;
+	float:left;
 }
 .item .cover{
 	padding:0 10px;
@@ -304,6 +311,13 @@ aside{
 }
 .item .brief{
 	min-height: 60px;
+}
+.item .brief p{
+	font-size: 1rem;
+}
+.cart_btn{
+	overflow: hidden;
+	text-align: center;
 }
 .cart_btn a{
 	display: inline-block;
