--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,12 @@
                 {% endfor %}
                 </select>
                 </form>
+                <ul class="nav navbar-nav navbar-left">
+                    {% get_language_info_list for LANGUAGES as languages %}
+                    <li><a href="/lang/?language=zh-cn&next={{ redirect_to }}">简体中文</a></li>
+                    <li><a>|</a></li>
+                    <li><a href="/lang/?language=en&next={{ redirect_to }}"></a></li>
+                </ul>
                 <ul class="nav navbar-nav navbar-right ">
                 {% load i18n %}
                     <li><a><span>{% trans "CALL US AT" %} 131231</span></a></li>
@@ -89,7 +95,7 @@
                 </ul>
             </div>
                 <div class="col-md-7 col-sm-7 col-xs-12 hidden-xs logo">
-                <a href="/"><img src = "http://minibobi.qiniudn.com/static/minibobi/images/LOGO.jpg" class="img-responsive"></a>
+                <a href="/"><img src = "http://minibobi.qiniudn.com/static/minibobi/images/logo.jpg" class="img-responsive"></a>
                 </div>
                 <div class="col-md-5 col-sm-5 search hidden-xs">
                 <form class="form-inline" role = "form">
@@ -176,6 +182,12 @@
 <script type="text/javascript">
     $(".language-form select").change(function(){
         $(".language-form").submit();
+    });
+
+    $(function(){
+        var url = window.location.pathname;
+        var menu = $(".main-nav>li>a[href='"+url+"']");
+        menu.addClass("active");
     });
 </script>
 {% block js %}
