--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% block title %}Homepage | MiniBobi, Clothing For Fat Baby{% endblock %}
 {% block main %}
-                <div class="banner">
+                <div class="col-md-12 col-sm-12 col-xs-12 banner">
                     <ul>
                         {% for b in banners  %}
                         <li>
@@ -11,7 +11,7 @@
                         {% endfor %}
                     </ul>
                 </div>
-                <div class="items">
+                <div class="col-md-12 col-sm-12 col-xs-12 items">
                     {% for p in products %}
                     <div class="col-md-4 col-sm-4 col-xs-6 item">
                         <div class="cover">
@@ -24,6 +24,7 @@
                         </div>
                         <div class="brief">
                         <p><a href="/product/{{ p.id }}/">{{ p.name }}</a></p>
+                        <p><b>{{ p.short_description }}</b></p>
                         <p>
                         {% if p.is_discount %}
                         <span style="text-decoration:line-through;">¥{{ p.price }}</span>
@@ -34,7 +35,7 @@
                         </p>
                         </div>
                         <div class="cart_btn">
-                        <a href= "/product/{{ p.id }}/"><span>{% trans "VIEW PRODUCT" %}</span></a>
+                        <a href= "/product/{{ p.id }}/" style="margin: 0 auto;"><span>{% trans "VIEW PRODUCT" %}</span></a>
                         </div>
                     </div>
                     {% empty %}
