--- a/templates/base.html
+++ b/templates/base.html
@@ -35,13 +35,7 @@
                 </option>
                 {% endfor %}
                 </select>
-                </form>
-                <ul class="nav navbar-nav navbar-left">
-                    {% get_language_info_list for LANGUAGES as languages %}
-                    <li><a href="/lang/?language=zh-cn&next={{ redirect_to }}">简体中文</a></li>
-                    <li><a>|</a></li>
-                    <li><a href="/lang/?language=en&next={{ redirect_to }}"></a></li>
-                </ul>
+                </form> 
                 <ul class="nav navbar-nav navbar-right ">
                 {% load i18n %}
                     <li><a><span>{% trans "CALL US AT" %} 131231</span></a></li>
@@ -95,7 +89,7 @@
                 </ul>
             </div>
                 <div class="col-md-7 col-sm-7 col-xs-12 hidden-xs logo">
-                <a href="/"><img src = "http://minibobi.qiniudn.com/static/minibobi/images/logo.jpg" class="img-responsive"></a>
+                <a href="/"><img src = "/static/minibobi/images/logo.jpg" class="img-responsive"></a>
                 </div>
                 <div class="col-md-5 col-sm-5 search hidden-xs">
                 <form class="form-inline" role = "form">
