--- a/templates/base.html
+++ b/templates/base.html
@@ -65,9 +65,9 @@
                             <li><a href="/product/girls/top/">{% trans "TOP" %}</a></li>
                             <li><a href="/product/girls/dress/">{% trans "DRESS" %}</a></li>
                             <li><a href="/product/girls/skirt/">{% trans "SKIRT" %}</a></li>
-                            <li><a href="/product/girls/pants">{% trans "PANTS" %}</a></li>
-                            <li><a href="/product/girls/cardigan">{% trans "CARDIGAN" %}</a></li>
-                            <li><a href="/product/girls/accessories">{% trans "ACCESSORIES" %}</a></li>
+                            <li><a href="/product/girls/pants-girls">{% trans "PANTS" %}</a></li>
+                            <li><a href="/product/girls/cardigan-girls">{% trans "CARDIGAN" %}</a></li>
+                            <li><a href="/product/accessories/">{% trans "ACCESSORIES" %}</a></li>
                             <li><a href="/lookbook/">{% trans "LOOKBOOK" %}</a></li>
                         </ul>
                     </li>
@@ -78,7 +78,7 @@
                             <li><a href="/product/boys/shirt/">{% trans "SHIRT" %}</a></li>
                             <li><a href="/product/boys/pants/">{% trans "PANTS" %}</a></li>
                             <li><a href="/product/boys/cardigan">{% trans "CARDIGAN" %}</a></li>
-                            <li><a href="/product/boysaccessories/">{% trans "ACCESSORIES" %}</a></li>
+                            <li><a href="/product/accessories/">{% trans "ACCESSORIES" %}</a></li>
                             <li><a href="/lookbook/">{% trans "LOOKBOOK" %}</a></li>
                         </ul>
                     </li>
